--- a/lib/assets/translations/ru.json
+++ b/lib/assets/translations/ru.json
@@ -11,5 +11,6 @@
   "high": "Высокий",
   "deadline": "Сделать до",
   "delete": "Удалить",
-  "DONE": "ГОТОВО"
+  "DONE": "ГОТОВО",
+  "emptyTask": "Пустая задача"
 }
