add some l10n words

--- a/lib/assets/translations/en.json
+++ b/lib/assets/translations/en.json
@@ -12,5 +12,7 @@
   "deadline": "Deadline",
   "delete": "Delete",
   "DONE": "DONE",
-  "emptyTask": "Empty task"
+  "emptyTask": "Empty task",
+  "smthgWentWrong": "Something went wrong...",
+  "refreshPage": "Refresh screen"
 }
